<resources>
    <string name="app_name">Czytnik zbliżeniowy</string>
    <string name="title_activity_login">RCPonline.pl</string>
    <string name="title_activity_main">RCPonline.pl</string>
    <string name="title_activity_employee">Lista pracowników</string>

    <string name="login_login">Login</string>
    <string name="login_password">Hasło</string>

    <string name="nfc_disabled">Wymaga uruchomienia NFC</string>
    <string name="action_settings">Settings</string>
    <string name="put_your_card">Przyłóż kartę</string>
    <string name="night_work">Przycisk rozpoczęcia pracy</string>
    <string name="night_work_summary">Aktywuj zawsze na początku dnia (pozwala uniknąć dodatkowych błędów rejestracji, jeśli nie została zakończona praca w dniu poprzednim)</string>

    <string name="event_work_start">Rozpoczęcie\npracy</string>
    <string name="event_break_start">Przerwa</string>
    <string name="event_break_finish">Koniec\nprzerwy</string>
    <string name="event_temp_start">Wyjście\nsłużbowe</string>
    <string name="event_temp_finish">Powrót</string>
    <string name="event_work_finish">Koniec\npracy</string>

    <string name="no_connection">Brak połączenia z serwerem: Synchronizacja zdarzeń nastąpi automatycznie po prawidłowym połączeniu</string>
    <string name="save_event">Zapisuje zdarzenie</string>
    <string name="last_events">Ostatnie zdarzenia</string>

    <string name="work_start">Rozpoczęcie pracy</string>
    <string name="break_start">Przerwa</string>
    <string name="break_finish">Koniec przerwy</string>
    <string name="temp_out_start">Wyjście służbowe</string>
    <string name="temp_out_finish">Powrót</string>
    <string name="work_finish">Koniec pracy</string>

    <string name="home">Ekran główny</string>
    <string name="settings">Ustawienia</string>
    <string name="employes_list">Lista pracowników</string>
    <string name="device_code">Kod urządzenia</string>
    <string name="version">Wersja oprogramowania</string>
    <string name="info">Informacje</string>
    <string name="logout">Wyloguj</string>

    <string name="login">Logowanie..</string>
    <string name="please_wait">Zapisywanie..</string>
    <string name="searching">Wyszukiwanie..</string>
    <string name="synchronized_with_server">Synchronizacja z serwerem...</string>

    <string name="bad_login_or_pass">Nieprawidłowy login lub hasło</string>
    <string name="error_unexpected">Błąd: Wystąpił nieoczekiwany błąd</string>
    <string name="error_500">Błąd 500: Serwer zajęty lub wyłączony</string>
    <string name="error_404">Błąd 404: Brak połączenia z serwerem</string>
    <string name="error_offline">Nie można się zalogować - sprawdź połączenie internetowe</string>
    <string name="location_disabled">Brak informacji - wyłączona opcja lokalizacji w urządzeniu</string>
    <string name="synchronized_off">Synchronizacja nie jest możliwa - sprawdz połączenie internetowe</string>

    <string name="event_dialog_yes">Ponów</string>
    <string name="event_dialog_no">Anuluj</string>

    <string name="event_comment">Komentarz:</string>
    <string name="event_saved">Zarejestrowano </string>

    <string name="settings_break">Przerwa</string>
    <string name="settings_break_desc">Aktywuj przycisk</string>
    <string name="settings_pay_exit">Wyjście służbowe</string>
    <string name="settings_pay_exit_desc">Aktywuj przycisk</string>
    <string name="settings_comment">Komentarz</string>
    <string name="settings_comment_desc">Udostępnij pole</string>
    <string name="settings_view_last_events">Ostatnie zdarzenia</string>
    <string name="settings_view_last_events_desc">Włącz widoczność</string>

    <string name="hello_world">Hello world!</string>
    <string name="make_foto">Rejestracja zdjęć</string>
    <string name="make_foto_desc">Rób zdjęcia pracownikom przy rejestracji zdarzeń</string>
    <string name="make_foto_preview">Podgląd zdjęcia</string>
    <string name="make_foto_preview_desc">Włącz podgląd zdjęcia</string>
</resources>
