<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pl.rcponline.api.MainActivity" >

    <item android:id="@+id/event_menu"
        android:title="@string/home"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="1"
        android:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_settings"
                android:title="@string/settings"
                android:orderInCategory="2"
                android:showAsAction="ifRoom" />
            <item
                android:id="@+id/menu_employes_list"
                android:title="@string/employes_list"
                android:orderInCategory="3"
                android:showAsAction="ifRoom" />
            <item
                android:id="@+id/menu_home"
                android:title="@string/home"
                android:orderInCategory="4"
                android:showAsAction="ifRoom" />
            <item
                android:id="@+id/menu_info"
                android:title="@string/info"
                android:orderInCategory="5"
                android:showAsAction="ifRoom" />
            <item
                android:id="@+id/menu_logout"
                android:title="@string/logout"
                android:orderInCategory="6"
                android:showAsAction="ifRoom" />
        </menu>
    </item>

</menu>